--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link href="
         https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap&quot;
         rel="stylesheet">
-    <title>Em busca da cidade perdida</title>
+
+        <title>a viajem do rj
+    </title>
 </head>
 
 <body>
@@ -39,7 +41,7 @@
         <div class="passo" id="passo-4">
             <img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
             <p>você ve que rj é muito longe e desiste da viajem
-            voltando pra casa.</p>
+                voltando pra casa.</p>
         </div>
 
         <div class="passo" id="passo-5">
@@ -54,7 +56,7 @@
         </div>
 
         <div class="passo" id="passo-7">
-            <p>No talho você encontra assaltantes a longe.</p>
+            <p>No talho você encontra assaltantes ao longe.</p>
             <button class="btn-proximo" data-proximo="9">Seguir pelo caminho à esquerda</button>
             <button class="btn-proximo" data-proximo="10">Seguir pelo caminho à direita</button>
         </div>
@@ -65,7 +67,7 @@
         </div>
 
         <div class="passo" id="passo-9">
-            <p>o caminho a direita leva você a são paulo   
+            <p>o caminho a direita leva você a são paulo
                 a grande cidade.</p>
             <button class="btn-proximo" data-proximo="11">entrar na grande cidade</button>
         </div>
@@ -86,7 +88,7 @@
         <div class="passo" id="passo-12">
             <p>Retornando e escolhendo ocaminho à esquerda, você finalmente encontra o caminho certo
                 que levam à cidade perdida.</p>
-            <button class="btn-proximo" data-proximo="11">Explorar a  grande cidade</button>
+            <button class="btn-proximo" data-proximo="11">Explorar a grande cidade</button>
         </div>
     </main>
     <script src="script.js"></script>
